--- a/apps/m-admin/src/app/app.component.html
+++ b/apps/m-admin/src/app/app.component.html
@@ -1,8 +1,20 @@
-<div class="container flex min-h-screen items-center justify-center">
-  <article class="prose lg:prose-xl dark:prose-invert m-auto text-center">
-    <h1>Welcome To Our <br />Admin App!</h1>
-    <p>For years parents have espoused the health benefits of eating garlic bread with cheese to their children, with the food earning such an iconic status in our culture that kids will often dress up as warm, cheesy loaf for Halloween.</p>
-    <p>But a recent study shows that the celebrated appetizer may be linked to a series of rabies cases springing up around the country.</p>
-  </article>
-</div>
-<router-outlet></router-outlet>
+<ion-app>
+  <ion-menu side="start" menuId="start" contentId="main">
+    <ion-header>
+      <ion-toolbar color="primary">
+        <ion-title>Main Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-item>Menu Item</ion-item>
+        <ion-item>Menu Item</ion-item>
+        <ion-item>Menu Item</ion-item>
+        <ion-item>Menu Item</ion-item>
+        <ion-item>Menu Item</ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+
+  <ion-router-outlet id="main"></ion-router-outlet>
+</ion-app>
