--- a/apps/m-admin/src/app/modules/home/home.page.html
+++ b/apps/m-admin/src/app/modules/home/home.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button menu="start" autoHide="false"></ion-menu-button>
     </ion-buttons>
-    <ion-title>Dark Toolbar</ion-title>
+    <ion-title>Admin App</ion-title>
   </ion-toolbar>
 </ion-header>
 
