feat(w-admin): :sparkles: add `home` and `services` module with crud methods

--- a/apps/w-admin/src/app/app.component.html
+++ b/apps/w-admin/src/app/app.component.html
@@ -1,9 +1,3 @@
-<div class="container flex min-h-screen items-center justify-center">
-  <article class="prose lg:prose-xl dark:prose-invert m-auto text-center">
-    <h1>Welcome To Our <br />{{ title }}!</h1>
-    <p>For years parents have espoused the health benefits of eating garlic bread with cheese to their children, with the food earning such an iconic status in our culture that kids will often dress up as warm, cheesy loaf for Halloween.</p>
-    <p>But a recent study shows that the celebrated appetizer may be linked to a series of rabies cases springing up around the country.</p>
-    <p>Message: {{ (hello$ | async)?.message }}</p>
-  </article>
+<div class="container">
+  <router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
