--- a/apps/m-admin/src/app/modules/home/home.page.html
+++ b/apps/m-admin/src/app/modules/home/home.page.html
@@ -10,7 +10,7 @@
 <ion-content>
   <div class="flex min-h-full items-center justify-center p-2">
     <article class="prose prose-orange dark:prose-invert m-auto rounded text-center">
-      <h1>{{ welcomeMessage }}</h1>
+      <h1>{{ welcomeMessage$ | async }}</h1>
       <p>For years parents have espoused the health benefits of eating garlic bread with cheese to their children, with the food earning such an iconic status in our culture that kids will often dress up as warm, cheesy loaf for Halloween.</p>
       <p>But a recent study shows that the celebrated appetizer may be linked to a series of rabies cases springing up around the country.</p>
       <button [routerLink]="['', 'services']" class="rounded-md bg-sky-500 px-6 py-2 text-xl font-bold text-white hover:bg-sky-600 hover:shadow-md">Services</button>
