fix(frontend): :lipstick: fix dark mode background and text colors

--- a/apps/m-admin/src/app/modules/home/home.page.html
+++ b/apps/m-admin/src/app/modules/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="dark">
+  <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button menu="start" autoHide="false"></ion-menu-button>
     </ion-buttons>
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-  <div class="flex min-h-full items-center justify-center p-2">
+  <div class="flex min-h-full items-center justify-center bg-white p-2 text-gray-700 dark:bg-gray-800 dark:text-gray-300">
     <article class="prose prose-orange dark:prose-invert m-auto rounded text-center">
       <h1>{{ welcomeMessage$ | async }}</h1>
       <p>For years parents have espoused the health benefits of eating garlic bread with cheese to their children, with the food earning such an iconic status in our culture that kids will often dress up as warm, cheesy loaf for Halloween.</p>
