--- a/apps/w-admin/src/app/app.component.html
+++ b/apps/w-admin/src/app/app.component.html
@@ -1,3 +1,5 @@
-<div class="container">
-  <router-outlet></router-outlet>
+<div class="min-h-screen w-full bg-white text-gray-700 dark:bg-gray-800 dark:text-gray-300">
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
 </div>
