refactor(frontend): :recycle: move home and services modules to libraries

--- a/apps/w-admin/src/app/modules/services/services.page.html
+++ b/apps/w-admin/src/app/modules/services/services.page.html
@@ -1,27 +1,1 @@
-<div class="prose prose-sm dark:prose-invert mx-auto w-96 max-w-full p-8">
-  <button [routerLink]="['', 'home']" class="mb-4 rounded-md bg-sky-500 px-6 py-2 text-xl font-bold text-white hover:bg-sky-600 hover:shadow-md">Return</button>
-
-  <h1>Services</h1>
-  <form [formGroup]="createForm" (ngSubmit)="create()" class="flex w-full items-center" autocomplete="off">
-    <input type="text" formControlName="name" id="name" class="flex-grow border-0 bg-gray-100 p-3 disabled:opacity-60 dark:bg-gray-700" placeholder="Service Name" />
-    <button type="submit" class="rounded-e-3xl bg-sky-500 p-3 text-white disabled:opacity-60" [disabled]="createForm.disabled || createForm.invalid">Create</button>
-  </form>
-
-  <ng-container *ngIf="services$ | async as services">
-    <ul class="m-0 p-0" *ngIf="services.length; else emptyArray">
-      <li *ngFor="let service of services; trackBy:trackById" class="rounded-e-3xl mb-1 flex items-center justify-between bg-gray-100 p-4 dark:bg-gray-600">
-        <span class="m-0 font-bold dark:text-white">{{ service.name }}</span>
-        <button class="m-0 rounded bg-rose-500 px-2 py-1 text-xs text-white disabled:opacity-60" (click)="delete(service.id)" [disabled]="(isDeletingIds$ | async)?.[service.id]">delete</button>
-      </li>
-    </ul>
-
-    <ng-template #emptyArray>
-      <div class="p-1 text-center italic text-gray-400">
-        <p *ngIf="isLoadingServices$ | async; else notFound">Loading services...</p>
-        <ng-template #notFound>
-          <p>No Services Found.. Please Create New Service.</p>
-        </ng-template>
-      </div>
-    </ng-template>
-  </ng-container>
-</div>
+<nitro-frontend-services></nitro-frontend-services>
